Finalize Benchmark Viewer detail view and resolve rule violations